# Qubito

./: .env.example  .gitignore  .mcp.json  README.md  ROADMAP.md  main.py  mcp_servers.json  pyproject.toml  telegram_main.py
agents/: chandler.md  joey.md  macri.md  monica.md  phoebe.md  riquelme.md  ross.md
docs/: architecture.excalidraw  mcp.md
skills/: autojob.md  cron.md  stats.md
skills/context/: SKILL.md
skills/context-usage/: SKILL.md
skills/cron/: SKILL.md
skills/help/: SKILL.md
skills/history/: SKILL.md
skills/letcook/: SKILL.md
skills/lineup/: SKILL.md
skills/load/: SKILL.md
skills/model/: SKILL.md
skills/new-agent/: SKILL.md
skills/new-rule/: SKILL.md
skills/new-skill/: SKILL.md
skills/stats/: SKILL.md
skills/summarize/: SKILL.md
src/: constants.py  display.py  files.py
src/agents/: __init__.py  agent.py  agent_manager.py  builtin_tools.py  character_loader.py  delegation.py  registry.py
src/ai/: __init__.py  client.py  model_facade.py  providers.py
src/channels/: __init__.py  base.py  cli.py  telegram.py
src/cli/: app.py  cmd_auth.py  cmd_chat.py  cmd_daemon.py  cmd_init.py  cmd_new_project.py
src/config/: resolver.py
src/daemon/: __init__.py  api.py  client.py  lifecycle.py  server.py  session.py
src/genai/: __init__.py  chat_response.py  client.py  model_facade.py  providers.py
src/mcp/: __init__.py  file_server.py  led_server.py  (+2 more)
tests/: conftest.py  helpers.py  test_character_loader.py  test_config_resolver.py  test_conversation_db.py  test_event_bus.py  test_skill_registry.py  test_tool_loop.py
(+51 files in other folders)
