[project]
name = "friends-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "faiss-cpu>=1.8.0",
    "python-dotenv>=1.0.1",
    "google-genai>=1.0.0",
    "ollama>=0.6.1",
    "rich>=14.3.3",
    "torch>=2.10.0",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "python-telegram-bot>=21.0",
    "faster-whisper>=1.0.0",
]
