[project]
name = "qubito"
version = "0.1.0"
description = "Natural-language OS powered by LLM agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "faiss-cpu>=1.8.0",
    "python-dotenv>=1.0.1",
    "google-genai>=1.0.0",
    "ollama>=0.6.1",
    "rich>=14.3.3",
    "requests>=2.31.0",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "python-telegram-bot>=21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pymupdf>=1.27.2.2",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
ocr = ["torch>=2.10.0"]
stt = ["faster-whisper>=1.0.0"]
discord = ["discord.py>=2.3.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
qubito = "src.cli.app:main"
